--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 
    <header> <h1><em>Colégio Estadual Osório Duque Estrada</em></h1></header>
-   <header class="cabecalho"></ul>
-   <img src="entrada osorio.jpeg" alt="entrada">
-   <ul class="cabecalho-lista-item"></ul>
+   <header class=”cabecalho”></header>
+   <img src="entrada.jpeg" alt="entrada">
+   <ul class=”cabecalho-lista-item”></ul> 
     <p> O Colégio Estadual Osório Duque Estrada , localizado em 
         Diamante do Sul-Paraná , no endereço Avenida Getulio Vargas sn Centro , com telefone de contato (45) 3230-1154.</p>
      
